compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_and_call.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 34
expression: "\npub fn main(x) {\n  fn(x) { x }(x)\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(L) -> L.
main(X) ->
    (fun(X@1) -> X@1 end)(X).

