compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_param.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 23
expression: "pub fn main(board) {\nfn(board) { board }\n  board\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(L) -> L.
main(Board) ->
    fun(Board@1) -> Board@1 end,
    Board.

