compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_pipe.snap
---
source: compiler-core/src/erlang/tests/variables.rs
assertion_line: 45
expression: "\npub fn main(x) {\n  x\n  |> fn(x) { x }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(O) -> O.
main(X) ->
    _pipe = X,
    (fun(X@1) -> X@1 end)(_pipe).

